Complete login feature

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/style.css" />
+    <script type="module" src="./src/main.js"></script>
     <title>Document</title>
   </head>
   <body class="flex bg-gray-100 justify-center items-center h-screen font-sans">
     <div id="login" class="flex flex-col bg-slate-100 rounded-lg shadow-lg p-4">
       <h1 class="font-semibold text-center mb-4">Login</h1>
       <form
-        action=""
         id="login-form"
         class="flex flex-col justify-center items-center gap-3"
       >
@@ -29,7 +29,7 @@
         />
 
         <button
-          type="button"
+          type="submit"
           class="w-full bg-blue-400 rounded-md shadow-md p-2 hover:cursor-pointer"
         >
           Login
